--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -1,4 +1,5 @@
 # FROM gcr.io/kaniko-project/executor:debug-v0.10.0
-FROM yehiyam/kaniko_executor:101119
+ARG BASE_PRIVATE_REGISTRY=""
+FROM ${BASE_PRIVATE_REGISTRY}yehiyam/kaniko_executor:101119
 COPY run.sh /scripts/
 ENTRYPOINT [ "sh","-c", "/scripts/run.sh" ]
